--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
   "bugs": {
     "url": "https://github.com/ToshiKajitsu/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/ToshiKajitsu/frontend-project-lvl1#readme"
-  
+  "homepage": "https://github.com/ToshiKajitsu/frontend-project-lvl1#readme",
+  "dependencies": {
+    "eslint-plugin-jest": "^26.0.0",
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
+  }
 }
