--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,12 +16,7 @@ jobs:
         node-version: [14.x]
 
     steps:
+      - name: checkout repo
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+      - name: build application
       - run: make lint
