--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,16 @@ jobs:
         node-version: [14.x]
 
     steps:
-      - name: checkout repo
+      - name: check eslin
       - uses: actions/checkout@v2
-      - name: build application
-      - run: make lint
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm install
+        run: |
+          make install
+        env:
+          CI: true
+      - name: Run linter
+        run: |
+          make lint
